--- a/src/FilesSafeReserve.UI/Components/Pages/HomePage/HomePage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/HomePage/HomePage.razor
@@ -14,14 +14,14 @@
             <div class="app-description-key gradient-background">
                 Description
             </div>
-            <span class="app-description-value" style="text-align: justify;">
+            <div class="app-description-value" style="text-align: justify;">
                 <p>
                     Data backup is a critically important procedure to ensure the security and availability of important user information. People may accidentally delete or damage files without warning. Hard drives, flash drives, and other equipment may fail due to random malfunctions or breakdowns. Backup allows for the restoration of data that was saved on damaged media or accidentally deleted.
                 </p>
                 <p>
                     A data backup program, along with virtual vault management, automates a range of processes for convenient and secure file management by the user.
                 </p>
-            </span>
+            </div>
         </div>
         <div class="app-features">
             <div class="app-features-key gradient-background">
