--- a/src/FilesSafeReserve.UI/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
@@ -218,4 +218,12 @@
     .reserves-btns-container {
         flex-direction: column;
     }
+
+    .description-container {
+        font-size: small;
+    }
+
+    .timestamp-container {
+        font-size: small;
+    }
 }
