--- a/src/FilesSafeReserve.UI/Components/Pages/SettingsPage/SettingsPage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/SettingsPage/SettingsPage.razor
@@ -138,7 +138,7 @@
                     <div class="shortcut-key-code-container">
                         <div class="shortcut-key-container">
                             <div class="shortcut-key-key">
-                                Shortcut:
+                                <span>Shortcut:</span>
                             </div>
                             <span class="shortcut-key-value">
                                 @shortcut.KeyValue
@@ -161,7 +161,7 @@
                         </div>
                         <div class="shortcut-code-container">
                             <div class="shortcut-code-key">
-                                Key Code:
+                                <span>Key Code:</span>
                             </div>
                             <span class="shortcut-code-value">
                                 @shortcut.KeyCode
