--- a/src/FilesSafeReserve.UI/Components/Pages/EditSafePage/EditSafePage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/EditSafePage/EditSafePage.razor
@@ -45,13 +45,10 @@
                 <InputTextArea @bind-Value="ViewModel.VirtualSafe.Description" class="form-control" placeholder="Safe Description" id="floatingTextarea2" style="height: 200px"></InputTextArea>
                 <label for="floatingTextarea2">Safe description</label>
             </div>
-            <div class="btns-container">
-                <div class="btns-container-item">
-                    <Button Type="ButtonType.Submit" Color="ButtonColor.Primary"> Edit </Button>
-                </div>
-                <div class="btns-container-item">
-                    <Button onclick="history.back();" Color="ButtonColor.Secondary"> Go Back </Button>
-                </div>
+            <div class="btns-container btns-container-grid">
+                <Button Type="ButtonType.Submit" Color="ButtonColor.Primary" Style="width: 100px"> Edit </Button>
+
+                <Button onclick="history.back();" Color="ButtonColor.Secondary" Style="width: 100px"> Go Back </Button>
             </div>
 
             @if (ViewModel.EditContext.Validate() is false)
