--- a/src/FilesSafeReserve.UI/Components/Pages/EditSafePage/EditSafePage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/EditSafePage/EditSafePage.razor.css
@@ -28,17 +28,6 @@
     width: 90%;
 }
 
-.btns-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.btns-container-item {
-    margin: 20px;
-}
-
 .danger-container {
     display: flex;
     flex-direction: column;
@@ -55,4 +44,31 @@
 .message-container {
     display: flex;
     flex-direction: row;
+}
+
+.btns-container {
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    background: white;
+    margin-bottom: 20px;
+    max-width: 300px;
+}
+
+.btns-container-grid {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(auto-fit, 100px);
+    grid-column-gap: 30px;
+    grid-row-gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 855px) {
+    .danger-container {
+        font-size: small;
+    }
 }
