--- a/src/FilesSafeReserve.UI/Components/Pages/HomePage/HomePage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/HomePage/HomePage.razor.css
@@ -107,3 +107,19 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+@media (max-width: 855px) {
+    .app-description {
+        font-size: small;
+        overflow-x: auto;
+    }
+    .app-features {
+        font-size: small;
+        overflow-x: auto;
+    }
+    .app-feedback {
+        font-size: small;
+        white-space: nowrap;
+        overflow-x: auto;
+    }
+}
