--- a/src/FilesSafeReserve.UI/Components/Pages/SmartphonePage/SmartphonePage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/SmartphonePage/SmartphonePage.razor.css
@@ -163,3 +163,13 @@
     margin-right: 5px;
     margin-left: 5px;
 }
+
+@media (max-width: 855px) {
+    .virtual-safes-elements-container {
+        font-size: small;
+    }
+
+    .smartphones-elements-container {
+        font-size: small;
+    }
+}
